--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "author":"carlos-ortega",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt":                  "~0.4.1",
-    "grunt-contrib-stylus":   "~0.8.0",
-    "grunt-contrib-coffee":   "~0.7.0",
-    "grunt-contrib-jade":     "~0.8.0",
-    "grunt-contrib-watch":    "~0.5.3",
-    "grunt-contrib-uglify":   "~0.2.4",
-    "grunt-contrib-copy":     "~0.4.1",
-    "matchdep":               "*"
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-contrib-stylus": "~0.8.0",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-gh-pages": "^0.9.1",
+    "matchdep": "*"
   }
 }
